--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^6.19.1",
     "bcryptjs": "^3.0.3",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
+    "pg": "^8.16.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.6.0",
